Add width attribute to image elements

--- a/index.html
+++ b/index.html
@@ -105,19 +105,19 @@
     <div class="container-fluid">
 	<div class="row">
 		<div class="col-md-3">
-			<img alt="Bootstrap Image Preview" src="https://codehs.com/uploads/e200a7419d80ddfbeaa0584c63e57746" />
+			<img alt="Bootstrap Image Preview" src="https://codehs.com/uploads/e200a7419d80ddfbeaa0584c63e57746" width="100px" />
       12 Days: Klaus
 		</div>
 		<div class="col-md-3">
-			<img alt="Bootstrap Image Preview" src="https://codehs.com/uploads/36edc80af978462ba1e853868262133f" />
+			<img alt="Bootstrap Image Preview" src="https://codehs.com/uploads/36edc80af978462ba1e853868262133f" width="100px" />
 			11 Days: A Charlie Brown Christmas
 		</div>
 		<div class="col-md-3">
-			<img alt="Bootstrap Image Preview" src="https://codehs.com/uploads/38150f58fb9e414c48b0ca13857f8a5b" />
+			<img alt="Bootstrap Image Preview" src="https://codehs.com/uploads/38150f58fb9e414c48b0ca13857f8a5b" width="100px" />
 			10 Days: Christmas Vacation
 		</div>
 		<div class="col-md-3">
-			<img alt="Bootstrap Image Preview" src="https://codehs.com/uploads/cd5378f9b1e20bc66faa4eecbc190305" />
+			<img alt="Bootstrap Image Preview" src="https://codehs.com/uploads/cd5378f9b1e20bc66faa4eecbc190305" width="100px" />
 			9 Days: Home Alone
 		</div>
 	</div>
@@ -126,19 +126,19 @@
     <div class="container-fluid">
 	<div class="row">
 		<div class="col-md-3">
-			<img alt="Bootstrap Image Preview" src="https://codehs.com/uploads/9a1a9941453a8d3b23f39b1588e7d535" />
+			<img alt="Bootstrap Image Preview" src="https://codehs.com/uploads/9a1a9941453a8d3b23f39b1588e7d535" width="100px" />
       8 Days: Home Alone 2: Lost in New York
 		</div>
 		<div class="col-md-3">
-			<img alt="Bootstrap Image Preview" src="https://codehs.com/uploads/2bd77171e93262e0dd9b8771690dbaab" />
+			<img alt="Bootstrap Image Preview" src="https://codehs.com/uploads/2bd77171e93262e0dd9b8771690dbaab" width="100px" />
 			7 Days: The Santa Claus
 		</div>
 		<div class="col-md-3">
-			<img alt="Bootstrap Image Preview" src="https://codehs.com/uploads/540ed5093b6ebe66048ece685a619d94" />
+			<img alt="Bootstrap Image Preview" src="https://codehs.com/uploads/540ed5093b6ebe66048ece685a619d94" width="100px" />
 			6 Days: Die Hard
 		</div>
 		<div class="col-md-3">
-			<img alt="Bootstrap Image Preview" src="https://codehs.com/uploads/6335c92a96afde4005b8f50c2d11c26f" />
+			<img alt="Bootstrap Image Preview" src="https://codehs.com/uploads/6335c92a96afde4005b8f50c2d11c26f" width="100px" />
 			5 Days: The Year Without a Santa Claus
 		</div>
 	</div>
@@ -147,19 +147,19 @@
 	   <div class="container-fluid">
 	<div class="row">
 		<div class="col-md-3">
-			<img alt="Bootstrap Image Preview" src="https://codehs.com/uploads/9cd79d18e6f0007afe7e5e05ac8669fa" />
+			<img alt="Bootstrap Image Preview" src="https://codehs.com/uploads/9cd79d18e6f0007afe7e5e05ac8669fa" width="100px" />
       4 Days: Jingle All the Way
 		</div>
 		<div class="col-md-3">
-			<img alt="Bootstrap Image Preview" src="https://codehs.com/uploads/abca3154457635f771eb42c8ad11e40a" />
+			<img alt="Bootstrap Image Preview" src="https://codehs.com/uploads/abca3154457635f771eb42c8ad11e40a" width="100px" />
 			3 Days: Miracle on 34th Street
 		</div>
 		<div class="col-md-3">
-			<img alt="Bootstrap Image Preview" src="https://codehs.com/uploads/36354521c6077fbd13a34a4e22f29ec3" />
+			<img alt="Bootstrap Image Preview" src="https://codehs.com/uploads/36354521c6077fbd13a34a4e22f29ec3" width="100px" />
 			2 Days: Elf
 		</div>
 		<div class="col-md-3">
-			<img alt="Bootstrap Image Preview" src="https://codehs.com/uploads/b54370db82d379883f76ea2c7bb3d520" />
+			<img alt="Bootstrap Image Preview" src="https://codehs.com/uploads/b54370db82d379883f76ea2c7bb3d520" width="100px" />
 			1 Day: Its a Wonderful Life
 		</div>
 	</div>
