--- a/index.html
+++ b/index.html
@@ -100,6 +100,9 @@
       </div>
     </div>
 
+<br>
+<div border="dashed" border-color="Green" background-color="red">
+
     <h1>12 Days, 12 Movies before Christmas</h1>
 
     <div class="container-fluid">
@@ -175,6 +178,7 @@
 		</div>
 	</div>
 	</div>
+</div>
   </main>
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
