Add 'Project X' and 'Air Bud' to ratings table

--- a/ratings.html
+++ b/ratings.html
@@ -265,6 +265,7 @@
 		  <tr><td>Mission: Impossible - Rogue Nation</td><td>92%</td><td>2015</td></tr>
         <tr><td>Intersteller</td><td>100%</td><td>2014</td></tr>
            <tr><td>After Earth</td><td>7%</td><td>2013</td></tr>
+		  <tr><td>Project X</td><td>78%</td><td>2012</td></tr>
           <tr><td>Mission: Impossible - Ghost Protocol</td><td>92%</td><td>2010</td></tr>
 		  <tr><td>X-Men: First Class</td><td>89%</td><td>2010</td></tr>
         <tr><td>127 Hours</td><td>87%</td><td>2010</td></tr>
@@ -288,6 +289,7 @@
           <tr><td>Cast Away</td><td>90%</td><td>2000</td></tr>
         <tr><td>Leprechaun In the Hood</td><td>30%</td><td>2000</td></tr>     
         <tr><td>Star Wars: Episode I - The Phantom Menace</td><td>51%</td><td>1999</td></tr>
+		  <tr><td>Air Bud</td><td>45%</td><td>1997</td></tr>
             <tr><td>Space Jam</td><td>62%</td><td>1996</td></tr>
 		  <tr><td>Mission: Impossible</td><td>73%</td><td>1996</td></tr>
         <tr><td>Leprechaun 4: In Space</td><td>39%</td><td>1996</td></tr>
@@ -307,6 +309,7 @@
         <tr><td>Miracle on Ice</td><td>99%</td><td>1981</td></tr>
         <tr><td>Raiders of the Lost Ark</td><td>99%</td><td>1981</td></tr>
         <tr><td>Star Wars: Episode V - The Empire Strikes Back</td><td>100%</td><td>1980<td></tr>
+		   <tr><td>Rocky II</td><td>78%</td><td>1979</td></tr>
 		   <tr><td>Rocky</td><td>95%</td><td>1976</td></tr>
          <tr><td>Star Wars: Episode IV – A New Hope</td><td>92%</td><td>1974</td></tr>
         <tr><td>The Godfather Part II</td><td>100%</td><td>1974</td></tr>
