Fix HTML syntax for Christmas section

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     </div>
 
 <br>
-<div border="dashed" border-color="Green" background-color="red">
+<div class="Chrismas">
 
     <h1>12 Days, 12 Movies before Christmas</h1>
 
