--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!doctype html>
 <html lang="en">
 <head>
+
+<style>
+    html { background-color: red; }
+  </style>
+	
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>CinemaSpot — Home</title>
