Update movie listings and descriptions in index.html

--- a/index.html
+++ b/index.html
@@ -87,19 +87,19 @@
 <br>
         <div class="row">
           <div class="col-md-4">
-             <img src="https://codehs.com/uploads/b49972d37e3ec15fe75a4bf7f3808c8e" width="100px">
-            <h3>Air Bud (45%)</h3>
-            <p>Air Bud (1997) is about lonely 12-year-old Josh Framm, who, after moving to a new town, befriends Buddy, a runaway Golden Retriever with an incredible talent for basketball, leading them to join the school team and aim for the state finals, all while evading Buddy's abusive former owner who wants to reclaim him for profit</p>
+             <img src="https://codehs.com/uploads/56dbfb53ee1b464a3292a16f2a316d23" width="100px">
+            <h3>Home (52%)</h3>
+            <p>Home (2015) is a DreamWorks animated movie where a misfit alien named Oh (Jim Parsons) befriends a resourceful girl, Tip (Rihanna), after his species, the Boov, invade Earth for refuge; they embark on a road trip to find Tip's mother while evading Oh's own kind, forming an unlikely bond and changing intergalactic relations.</p>
           </div>
           <div class="col-md-4">
-            <img src="https://codehs.com/uploads/c0281a9af28c232da117f716185acd78" width="100px">
-            <h3>Project X (78%)</h3>
-            <p>Three high school seniors throw a party to make a name for themselves. As the night progresses, things spiral out of control as word of the party spreads.</p>
+            <img src="https://codehs.com/uploads/fa7cc1328c07817d2a8ffd0766456f64" width="100px">
+            <h3>Sicario (92%)</h3>
+            <p>the 2015 film about an idealistic FBI agent (Emily Blunt) recruited into a shadowy government task force battling Mexican drug cartels, led by a mysterious operative (Benicio Del Toro) and a ruthless contractor (Josh Brolin), as they descend into morally gray areas where justice and brutality blur along the U.S.-Mexico border</p>
           </div>
           <div class="col-md-4">
-            <img src="https://codehs.com/uploads/811602f3ef56dfd2bc595cbbfd8c7db0" width="100px">
-            <h3>Rocky II (78%)</h3>
-            <p>After Rocky goes the distance with champ Apollo Creed, both try to put the fight behind them and move on. Rocky settles down with Adrian but can't put his life together outside the ring, while Creed seeks a rematch to restore his reputation. Soon enough, the "Master of Disaster" and the "Italian Stallion" are set on a collision course for a climactic battle that is brutal and unforgettable.</p>
+            <img src="https://codehs.com/uploads/fd42736a1c8cd87ced36b29255a33d6e" width="100px">
+            <h3>Mission: Impossible - Rogue Nation ()</h3>
+            <p>Mission: Impossible - Rogue Nation (2015) follows IMF agent Ethan Hunt (Tom Cruise) and his team as they hunt the Syndicate, a shadowy, highly-skilled network of rogue operatives, after the CIA disbands the IMF.</p>
           </div>
         </div>
       </div>
