Add new movie ratings to ratings.html

--- a/ratings.html
+++ b/ratings.html
@@ -220,9 +220,15 @@
         </thead>
 
           <tr><td>Predator:Badlands</td><td>82%</td><td>2025</td></tr>
+		  <tr><td>Avatar: Fire and Ash</td><td>72%</td><td>2025</td></tr>
+		   <tr><td>28 Years Later</td><td>86%</td><td>2025</td></tr>
+		   <tr><td>Captain America: Brave New World</td><td>52%</td><td>2025</td></tr>
+		   <tr><td>Mickey 17</td><td>76%</td><td>2025</td></tr>
+		   <tr><td>The Running Man</td><td>75%</td><td>2025</td></tr>
 		  <tr><td>Jurassic World Rebirth</td><td>44%</td><td>2025</td></tr>
 		  <tr><td>F1</td><td>85%</td><td>2025</td></tr>
           <tr><td>Sinners</td><td>94%</td><td>2025</td></tr>
+		  <tr><td>Mission: Impossible – The Final Reckoning</td><td>81%</td><td>2025</td></tr>
 		   <tr><td>The Fantastic Four: First Steps</td><td>68%</td><td>2025</td></tr>
 		  <tr><td>SISU: Road to Revenge</td><td>92%</td><td>2025</td></tr>
 		  <tr><td>Mission: Impossible – Dead Reckoning Part One</td><td>89%</td><td>2023</td></tr>
