Update movie titles and images in ratings.html

--- a/ratings.html
+++ b/ratings.html
@@ -151,13 +151,13 @@
 				</div>
 				<div class="col-md-4">
 					<div class="card">
-						<img class="card-img-top" alt="Bootstrap Thumbnail Third" src="https://codehs.com/uploads/d965e3bcf644dc5529f34fb8d3a86e73" />
+						<img class="card-img-top" alt="Bootstrap Thumbnail Third" src="https://codehs.com/uploads/b7a0dccade967eea9de0898d1fa856b2" />
 						<div class="card-block">
 							<h5 class="card-title">
-								Top Gun: Maverick
+								Avatar: Fire and Ash
 							</h5>
 							<p class="card-text">
-								2022 (92%)
+								2025 (72%)
 							</p>
 						</div>
 					</div>
@@ -168,39 +168,39 @@
 			<div class="row">
 				<div class="col-md-4">
 					<div class="card">
-						<img class="card-img-top" alt="Bootstrap Thumbnail First" src="https://codehs.com/uploads/88a9d61e22bd33b3f626aaa45cffcf73" />
+						<img class="card-img-top" alt="Bootstrap Thumbnail First" src="https://codehs.com/uploads/bef8ee6b2ec46e5db7c36cb8f3c195a7" />
 						<div class="card-block">
 							<h5 class="card-title">
-								The Black Phone
+								28 Years Later
 							</h5>
 							<p class="card-text">
-								2021 (87%)
+								2025 (86%)
 							</p>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="card">
-						<img class="card-img-top" alt="Bootstrap Thumbnail Second" src="https://codehs.com/uploads/434af71cff35cd0092839467a6294228" />
+						<img class="card-img-top" alt="Bootstrap Thumbnail Second" src="https://codehs.com/uploads/cd9ea0a0ed2d3420faa56220834dfb23" />
 						<div class="card-block">
 							<h5 class="card-title">
-								Free Guy
+								Mickey 17
 							</h5>
 							<p class="card-text">
-								2021 (89%)
+								2025 (76%)
 							</p>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="card">
-						<img class="card-img-top" alt="Bootstrap Thumbnail Third" src="https://codehs.com/uploads/6e7a0fa00ba71861b1f6573274829f20" />
+						<img class="card-img-top" alt="Bootstrap Thumbnail Third" src="https://codehs.com/uploads/1bc8391c9ec97a88a6266f43cf6a312a" />
 						<div class="card-block">
 							<h5 class="card-title">
-								Space Jam: A New Legacy
+								Captain America: Brave New World
 							</h5>
 							<p class="card-text">
-								2021 (39%)
+								2025 (52%)
 							</p>
 						</div>
 					</div>
