--- a/index.html
+++ b/index.html
@@ -45,23 +45,24 @@
 
         <div id="homeCarousel" class="carousel slide mb-4" data-ride="carousel">
           <ol class="carousel-indicators">
-            <li data-target="https://codehs.com/uploads/e0235d435e5fd0e216c2cfab458ac1e1" data-slide-to="0" class="active"></li>
-            <li data-target="https://codehs.com/uploads/c5f7f1e1cdbdfe3d59b0505eb7b88a9e" data-slide-to="1"></li>
+            <li data-target="https://codehs.com/uploads/9a2ea882bfbc9d077c793019b5fa8ce1" data-slide-to="0" class="active"></li>
+            <li data-target="https://codehs.com/uploads/1e6139431a43d7f1f3d78c8407579216" data-slide-to="1"></li>
             <li data-target="https://codehs.com/uploads/454f18281702adb477774147c0c08dcb" data-slide-to="2"></li>
           </ol>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="https://codehs.com/uploads/e0235d435e5fd0e216c2cfab458ac1e1" class="d-block w-100" alt="Slide 1" >
+              <img src="https://codehs.com/uploads/9a2ea882bfbc9d077c793019b5fa8ce1" class="d-block w-100" alt="Slide 1" >
               <div class="carousel-caption d-none d-md-block">
-                <h5>Golden Globes</h5>
-                <p>Marlon Wayans and Skye P. Marshall are set to reveal this year’s nominees starting at 5:15 a.m. PT, with 11 categories shared exclusively on CBS Mornings at 5:30 a.m. PT. Awards observers can also watch a livestream of the 2026 Golden Globes nominations announcement on CBS News’ YouTube and TikTok channels.</p>
+                <h5>Marvel</h5>
+                <p>
+First 'Avengers: Doomsday' trailer hits theaters and officially confirms the return of Captain America star Chris Evans </p>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="https://codehs.com/uploads/c5f7f1e1cdbdfe3d59b0505eb7b88a9e" class="d-block w-100" alt="Slide 2" >
+              <img src="https://codehs.com/uploads/1e6139431a43d7f1f3d78c8407579216" class="d-block w-100" alt="Slide 2" >
               <div class="carousel-caption d-none d-md-block">
-                <h5>Anaconda</h5>
-                <p>Paul Rudd Says Ice Cube’s Approval of New ‘Anaconda’ Is Like “Being Blessed by the Pope”</p>
+                <h5>The Odyssey</h5>
+                <p>The Odyssey will release on July 17, 2026</p>
               </div>
             </div>
             <div class="carousel-item">
@@ -98,7 +99,7 @@
           </div>
           <div class="col-md-4">
             <img src="https://codehs.com/uploads/fd42736a1c8cd87ced36b29255a33d6e" width="100px">
-            <h3>Mission: Impossible - Rogue Nation ()</h3>
+            <h3>Mission: Impossible - Rogue Nation (92%)</h3>
             <p>Mission: Impossible - Rogue Nation (2015) follows IMF agent Ethan Hunt (Tom Cruise) and his team as they hunt the Syndicate, a shadowy, highly-skilled network of rogue operatives, after the CIA disbands the IMF.</p>
           </div>
         </div>
