Add Google Analytics tracking to index.html
Added Google Analytics tracking script to the HTML.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,16 @@
 <!doctype html>
 <html lang="en">
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-TBLSNBGW55"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-TBLSNBGW55');
+</script>
+	
 <head>
 
 <style>
