--- a/ratings.html
+++ b/ratings.html
@@ -1,6 +1,3 @@
-<!doctype html>
-<html lang="en">
-
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-TBLSNBGW55"></script>
 <script>
@@ -10,7 +7,9 @@
 
   gtag('config', 'G-TBLSNBGW55');
 </script>
-	
+
+<!doctype html>
+<html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -242,6 +241,10 @@
 		  <tr><td>Mission: Impossible – The Final Reckoning</td><td>81%</td><td>2025</td></tr>
 		   <tr><td>The Fantastic Four: First Steps</td><td>68%</td><td>2025</td></tr>
 		  <tr><td>SISU: Road to Revenge</td><td>92%</td><td>2025</td></tr>
+
+          <tr><td>The Fall Guy</td><td>70%</td><td>2024</td></tr>
+		  <tr><td>Small Things like These</td><td>%</td><td>2024</td></tr>
+		  
 		  <tr><td>Mission: Impossible – Dead Reckoning Part One</td><td>89%</td><td>2023</td></tr>
           <tr><td>Top Gun: Maverick</td><td>92%</td><td>2022</td></tr>
 		  <tr><td>All Quiet on the Western Front</td><td>90%</td><td>2022</td></tr>
