--- a/ratings.html
+++ b/ratings.html
@@ -241,19 +241,37 @@
 		  <tr><td>Mission: Impossible – The Final Reckoning</td><td>81%</td><td>2025</td></tr>
 		   <tr><td>The Fantastic Four: First Steps</td><td>68%</td><td>2025</td></tr>
 		  <tr><td>SISU: Road to Revenge</td><td>92%</td><td>2025</td></tr>
-
           <tr><td>The Fall Guy</td><td>70%</td><td>2024</td></tr>
-		  <tr><td>Small Things like These</td><td>%</td><td>2024</td></tr>
-		  
+		  <tr><td>Small Things like These</td><td>79%</td><td>2024</td></tr>
+		  <tr><td>Fly Me to the Moon</td><td>66%</td><td>2024</td></tr>		
+		  <tr><td>Kingdom of the Planet of the Apes</td><td>76%</td><td>2024</td></tr>
+		  <tr><td>Lift</td><td>46%</td><td>2024</td></tr>
+		  <tr><td>Trap</td><td>55%</td><td>2024</td></tr>
 		  <tr><td>Mission: Impossible – Dead Reckoning Part One</td><td>89%</td><td>2023</td></tr>
+		  <tr>Gran Turismo<td></td><td>82%</td><td>2023</td></tr>
+		  <tr>The Creator<td></td><td>53%</td><td>2023</td></tr>
+		  <tr>Crater<td></td><td>54%</td><td>2023</td></tr>
+		  <tr>65<td></td><td>35%</td><td>2023</td></tr>
+		  <tr>The Boys in the Boat<td></td><td>75%</td><td>2023</td></tr>
+		   <tr>Shooting Stars<td></td><td>65%</td><td>2023</td></tr>
+		   <tr>The Family Plan<td></td><td>56%</td><td>2023</td></tr>
+		  <tr>Heart of Stone<td></td><td>34%</td><td>2023</td></tr>
+		   <tr>The Long Game<td></td><td>73%</td><td>2023</td></tr>
+		  <tr>Indiana Jones and the Dial of Destiny<td></td><td>70%</td><td>2023</td></tr>
+		  <tr>Oppenheimer<td></td><td>91%</td><td>2023</td></tr>
           <tr><td>Top Gun: Maverick</td><td>92%</td><td>2022</td></tr>
 		  <tr><td>All Quiet on the Western Front</td><td>90%</td><td>2022</td></tr>
 		  <tr><td>Everything Everywhere All at Once</td><td>93%</td><td>2022</td></tr>
 		  <tr><td>Avatar</td><td>81%</td><td>2022</td></tr>
 		  <tr><td>Sisu</td><td>86%</td><td>2022</td></tr>
+          <tr><td>Uncharted</td><td>64%</td><td>2022</td></tr>
           <tr><td>The Black Phone</td><td>87%</td><td>2021</td></tr>
           <tr><td>Free Guy</td><td>89%</td><td>2021</td></tr>
          <tr><td>Space Jam: A New Legacy</td><td>39%</td><td>2021</td></tr>
+         <tr><td>Jungle Cruise</td><td>63%</td><td>2021</td></tr>
+		  <tr><td>Dune</td><td>83%</td><td>2021</td></tr>
+		  <tr><td>Ghostbusters: Afterlife</td><td>70%</td><td>2021</td></tr>
+		  
           <tr><td>We Can be Heros</td><td>60%</td><td>2020</td></tr>
 		    <tr><td>Soul</td><td>91%</td><td>2020</td></tr>
 		  <tr><td>Extraction</td><td>77%</td><td>2020</td></tr>
@@ -295,6 +313,7 @@
           <tr><td>Inglourious Basterds</td><td>99%</td><td>2009</td></tr>   
           <tr><td>Role Models</td><td>88%</td><td>2008</td></tr>  
         <tr><td>Star Wars: The Clone Wars</td><td>47%</td><td>2008</td></tr>   
+        <tr><td>Indiana Jones and the Kingdom of the Crystal Skull</td><td>70%</td><td>2008</td></tr>   
 		  <tr><td>Superbad</td><td>98%</td><td>2007</td></tr>   
         <tr><td>Rescue Dawn</td><td>80%</td><td>2006</td></tr>
           <tr><td>Happy Feet</td><td>73%</td><td>2006</td></tr>
@@ -320,9 +339,11 @@
          <tr><td>Leprechaun</td><td>34%</td><td>1993</td></tr>
          <tr><td>Terminator 2: Judgement Day</td><td>97%</td><td>1991</td></tr>
         <tr><td>GoodFellas</td><td>100%</td><td>1990</td></tr>
+		  <tr><td>Indiana Jones and the Last Crusade</td><td>82%</td><td>1989</td></tr>
         <tr><td>Top Gun</td><td>72%</td><td>1986</td></tr>
         <tr><td>Aliens</td><td>95%</td><td>1986</td></tr>
          <tr><td>The Breakfast Club</td><td>91%</td><td>1985</td></tr>
+		  <tr><td>Indiana Jones and the Temple of Doom</td><td>78%</td><td>1984</td></tr>
         <tr><td>The Terminator</td><td>96%</td><td>1984</td></tr>
         <tr><td>Return of the Jedi</td><td>88%</td><td>1983<td></tr>
           <tr><td>Tron</td><td>72%</td><td>1982</td></tr>
