--- a/ratings.html
+++ b/ratings.html
@@ -248,17 +248,17 @@
 		  <tr><td>Lift</td><td>46%</td><td>2024</td></tr>
 		  <tr><td>Trap</td><td>55%</td><td>2024</td></tr>
 		  <tr><td>Mission: Impossible – Dead Reckoning Part One</td><td>89%</td><td>2023</td></tr>
-		  <tr>Gran Turismo<td></td><td>82%</td><td>2023</td></tr>
-		  <tr>The Creator<td></td><td>53%</td><td>2023</td></tr>
-		  <tr>Crater<td></td><td>54%</td><td>2023</td></tr>
-		  <tr>65<td></td><td>35%</td><td>2023</td></tr>
-		  <tr>The Boys in the Boat<td></td><td>75%</td><td>2023</td></tr>
-		   <tr>Shooting Stars<td></td><td>65%</td><td>2023</td></tr>
-		   <tr>The Family Plan<td></td><td>56%</td><td>2023</td></tr>
-		  <tr>Heart of Stone<td></td><td>34%</td><td>2023</td></tr>
-		   <tr>The Long Game<td></td><td>73%</td><td>2023</td></tr>
-		  <tr>Indiana Jones and the Dial of Destiny<td></td><td>70%</td><td>2023</td></tr>
-		  <tr>Oppenheimer<td></td><td>91%</td><td>2023</td></tr>
+		  <tr><td>Gran Turismo</td><td>82%</td><td>2023</td></tr>
+		  <tr><td>The Creator</td><td>53%</td><td>2023</td></tr>
+		  <tr><td>Crater</td><td>54%</td><td>2023</td></tr>
+		  <tr><td>65</td><td>35%</td><td>2023</td></tr>
+		  <tr><td>The Boys in the Boat</td><td>75%</td><td>2023</td></tr>
+		   <tr<td>>Shooting Stars</td><td>65%</td><td>2023</td></tr>
+		   <tr><td>The Family Plan</td><td>56%</td><td>2023</td></tr>
+		  <tr><td>Heart of Stone</td><td>34%</td><td>2023</td></tr>
+		   <tr><td>The Long Game</td><td>73%</td><td>2023</td></tr>
+		  <tr><td>Indiana Jones and the Dial of Destiny</td><td>70%</td><td>2023</td></tr>
+		  <tr><td>Oppenheimer</td><td>91%</td><td>2023</td></tr>
           <tr><td>Top Gun: Maverick</td><td>92%</td><td>2022</td></tr>
 		  <tr><td>All Quiet on the Western Front</td><td>90%</td><td>2022</td></tr>
 		  <tr><td>Everything Everywhere All at Once</td><td>93%</td><td>2022</td></tr>
@@ -271,7 +271,6 @@
          <tr><td>Jungle Cruise</td><td>63%</td><td>2021</td></tr>
 		  <tr><td>Dune</td><td>83%</td><td>2021</td></tr>
 		  <tr><td>Ghostbusters: Afterlife</td><td>70%</td><td>2021</td></tr>
-		  
           <tr><td>We Can be Heros</td><td>60%</td><td>2020</td></tr>
 		    <tr><td>Soul</td><td>91%</td><td>2020</td></tr>
 		  <tr><td>Extraction</td><td>77%</td><td>2020</td></tr>
