--- a/ratings.html
+++ b/ratings.html
@@ -219,9 +219,102 @@
 		</div>
 	</div>
 </div>
-	  
+
 <br>
 
+	  <div class="container-fluid">
+	<div class="row">
+		<div class="col-md-6">
+			<div class="row">
+				<div class="col-md-4">
+					<div class="card">
+						<img class="card-img-top" alt="Bootstrap Thumbnail First" src="https://codehs.com/uploads/4ec915edbf49a657cc21e38f6d78692e" />
+						<div class="card-block">
+							<h5 class="card-title">
+								The Fall Guy
+							</h5>
+							<p class="card-text">
+								2024 (70%)
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="card">
+						<img class="card-img-top" alt="Bootstrap Thumbnail Second" src="https://codehs.com/uploads/8a12493efe1c58641c229baaf9ab451e" />
+						<div class="card-block">
+							<h5 class="card-title">
+								Small Things like These
+							</h5>
+							<p class="card-text">
+								2024 (79%)
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="card">
+						<img class="card-img-top" alt="Bootstrap Thumbnail Third" src="https://codehs.com/uploads/9e1fbc7b10cc6ac0f6c4d16856288b03" />
+						<div class="card-block">
+							<h5 class="card-title">
+								Fly Me to the Moon
+							</h5>
+							<p class="card-text">
+								2024 (66%)
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="col-md-6">
+			<div class="row">
+				<div class="col-md-4">
+					<div class="card">
+						<img class="card-img-top" alt="Bootstrap Thumbnail First" src="https://codehs.com/uploads/135df302ecd62cdb918d9b4936dc574e" />
+						<div class="card-block">
+							<h5 class="card-title">
+								Kingdom of the Planet of the Apes
+							</h5>
+							<p class="card-text">
+								2024 (76%)
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="card">
+						<img class="card-img-top" alt="Bootstrap Thumbnail Second" src="https://codehs.com/uploads/3c204d671525b58420a0bc9a1e927673" />
+						<div class="card-block">
+							<h5 class="card-title">
+								Lift
+							</h5>
+							<p class="card-text">
+								2024 (46%)
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="card">
+						<img class="card-img-top" alt="Bootstrap Thumbnail Third" src="https://codehs.com/uploads/3bfd55efc6b8a1369303f9dec92e8a63" />
+						<div class="card-block">
+							<h5 class="card-title">
+								Trap
+							</h5>
+							<p class="card-text">
+								2024 (55%)
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
+<br>
+	  
      <div class="table-responsive">
       <table class="table table-striped">
 
