--- a/ratings.html
+++ b/ratings.html
@@ -346,7 +346,7 @@
 		  <tr><td>Crater</td><td>54%</td><td>2023</td></tr>
 		  <tr><td>65</td><td>35%</td><td>2023</td></tr>
 		  <tr><td>The Boys in the Boat</td><td>75%</td><td>2023</td></tr>
-		   <tr<td>>Shooting Stars</td><td>65%</td><td>2023</td></tr>
+		   <tr<td>Shooting Stars</td><td>65%</td><td>2023</td></tr>
 		   <tr><td>The Family Plan</td><td>56%</td><td>2023</td></tr>
 		  <tr><td>Heart of Stone</td><td>34%</td><td>2023</td></tr>
 		   <tr><td>The Long Game</td><td>73%</td><td>2023</td></tr>
