--- a/ratings.html
+++ b/ratings.html
@@ -103,7 +103,7 @@
 								SISU: Road to Revenge
 							</h5>
 							<p class="card-text">
-								2025
+								2025 (92%)
 							</p>
 						</div>
 					</div>
@@ -313,6 +313,100 @@
 	</div>
 </div>
 
+<br>
+	  <br>
+
+	  <div class="container-fluid">
+	<div class="row">
+		<div class="col-md-6">
+			<div class="row">
+				<div class="col-md-4">
+					<div class="card">
+						<img class="card-img-top" alt="Bootstrap Thumbnail First" src="https://codehs.com/uploads/236821d00491d13d1c91436dbd36d4f8" />
+						<div class="card-block">
+							<h5 class="card-title">
+								Mission: Impossible – Dead Reckoning Part One
+							</h5>
+							<p class="card-text">
+								2023 (89%)
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="card">
+						<img class="card-img-top" alt="Bootstrap Thumbnail Second" src="https://codehs.com/uploads/46d7beda915262d5912754be1e3457ac" />
+						<div class="card-block">
+							<h5 class="card-title">
+								Gran Turismo
+							</h5>
+							<p class="card-text">
+								2023 (82%)
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="card">
+						<img class="card-img-top" alt="Bootstrap Thumbnail Third" src="https://codehs.com/uploads/76f5734724c2decb13a6810108595a68" />
+						<div class="card-block">
+							<h5 class="card-title">
+								The Creator
+							</h5>
+							<p class="card-text">
+								2024 (53%)
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="col-md-6">
+			<div class="row">
+				<div class="col-md-4">
+					<div class="card">
+						<img class="card-img-top" alt="Bootstrap Thumbnail First" src="https://codehs.com/uploads/27b25bc351b1156fbb3c72888b8f0e35" />
+						<div class="card-block">
+							<h5 class="card-title">
+								Crater
+							</h5>
+							<p class="card-text">
+								2023 (54%)
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="card">
+						<img class="card-img-top" alt="Bootstrap Thumbnail Second" src="https://codehs.com/uploads/18829d5eb9273dbfa82cdbf068585711" />
+						<div class="card-block">
+							<h5 class="card-title">
+								65
+							</h5>
+							<p class="card-text">
+								2023 (35%)
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="card">
+						<img class="card-img-top" alt="Bootstrap Thumbnail Third" src="https://codehs.com/uploads/eeebdb12260cbba04d10a4d6648a5857" />
+						<div class="card-block">
+							<h5 class="card-title">
+								The Boys in the Boat
+							</h5>
+							<p class="card-text">
+								2023 (75%)
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+	  
 <br>
 	  
      <div class="table-responsive">
