--- a/about.html
+++ b/about.html
@@ -33,12 +33,12 @@
     <h1 class="mt-4">About CinemaSpot</h1>
     <br>
     <p class="lead"></p>
-    <h2>Data Retrival:</h2>
-    <p>First we pull information from all these websites. Such as IMDb; for its large Database of ratings basd on views of the movies, The Movie Ranking Database; for the fan perspective, Rotten Tomatoes; for the quick ratings of the different factors(plot, diologue, Rewatchablility and more) that go into great movies, and some of our websites prefrerence.</p>
+    <h2>Data Retrieval:</h2>
+    <p>First we pull information from all these websites. Such as IMDb; for its large Database of ratings based on views of the movies, The Movie Ranking Database; for the fan perspective, Rotten Tomatoes; for the quick ratings of the different factors(plot, dialogue, Rewatchability and more) that go into great movies, and some of our websites preference.</p>
      <h2>Standardization</h2>
-    <p>Next we bring this information together about the movies and we change there individual ratings to out of 100% to get them on an even feild.</p>
+    <p>Next we bring this information together about the movies and we change their individual ratings to out of 100% to get them on an even field.</p>
      <h2>"Super Score" Calculation</h2>
-    <p>Finally we add up all these values and get the Super score displayed with every Movie on this site. (Ratigns can be altered if needed)</p>
+    <p>Finally we add up all these values and get the Super score displayed with every Movie on this site. (Ratings can be altered if needed)</p>
   </main>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
