--- a/ratings.html
+++ b/ratings.html
@@ -411,7 +411,197 @@
 </div>
 	  
 <br>
+
+
+	  <div class="container-fluid">
+	<div class="row">
+		<div class="col-md-6">
+			<div class="row">
+				<div class="col-md-4">
+					<div class="card">
+						<img class="card-img-top" alt="Bootstrap Thumbnail First" src="https://codehs.com/uploads/ad4c8b5618d6ce3566b2c3fdab70f5ce" />
+						<div class="card-block">
+							<h5 class="card-title">
+								Shooting Stars
+							</h5>
+							<p class="card-text">
+								2023 (65%)
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="card">
+						<img class="card-img-top" alt="Bootstrap Thumbnail Second" src="https://codehs.com/uploads/923bec38f321951480f618c147c45448" />
+						<div class="card-block">
+							<h5 class="card-title">
+								The Family Plan
+							</h5>
+							<p class="card-text">
+								2023 (56%)
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="card">
+						<img class="card-img-top" alt="Bootstrap Thumbnail Third" src="https://codehs.com/uploads/7e8354deb765021403f72ba325668d26" />
+						<div class="card-block">
+							<h5 class="card-title">
+								Heart of Stone
+							</h5>
+							<p class="card-text">
+								2024 (34%)
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="col-md-6">
+			<div class="row">
+				<div class="col-md-4">
+					<div class="card">
+						<img class="card-img-top" alt="Bootstrap Thumbnail First" src="https://codehs.com/uploads/bcf7226a52e491478f4434c1d08a3e69" />
+						<div class="card-block">
+							<h5 class="card-title">
+								The Long Game
+							</h5>
+							<p class="card-text">
+								2023 (73%)
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="card">
+ <img class="card-img-top" alt="Bootstrap Thumbnail Second" src="https://codehs.com/uploads/c42ee1ad872858d4b6188d06eed93e52" />
+							<div class="card-block">
+							<h5 class="card-title">
+								Indiana Jones and the Dial of Destiny
+							</h5>
+							<p class="card-text">
+								2023 (70%)
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="card">
+						<img class="card-img-top" alt="Bootstrap Thumbnail Third" src="https://codehs.com/uploads/2dd62e50d135f30257db3bf344013bc1" />
+						<div class="card-block">
+							<h5 class="card-title">
+								Oppenheimer
+							</h5>
+							<p class="card-text">
+								2023 (91%)
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+	  
+<br>
+	  
 <h2>2022</h2>
+
+<br>
+
+
+	  <div class="container-fluid">
+	<div class="row">
+		<div class="col-md-6">
+			<div class="row">
+				<div class="col-md-4">
+					<div class="card">
+						<img class="card-img-top" alt="Bootstrap Thumbnail First" src="https://codehs.com/uploads/e838ba46429e47881b6d1109e606af62" />
+						<div class="card-block">
+							<h5 class="card-title">
+								Top Gun: Maverick
+							</h5>
+							<p class="card-text">
+								2022 (92%)
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="card">
+						<img class="card-img-top" alt="Bootstrap Thumbnail Second" src="https://codehs.com/uploads/ec2ec31d0e09fa5f4f46ff1726b1e41e" />
+						<div class="card-block">
+							<h5 class="card-title">
+								All Quiet on the Western Front
+							</h5>
+							<p class="card-text">
+								2022 (90%)
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="card">
+						<img class="card-img-top" alt="Bootstrap Thumbnail Third" src="https://codehs.com/uploads/bb2fb63ebf7b2755b2648b04abda45cd" />
+						<div class="card-block">
+							<h5 class="card-title">
+								Everything Everywhere All at Once
+							</h5>
+							<p class="card-text">
+								2022 (93%)
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="col-md-6">
+			<div class="row">
+				<div class="col-md-4">
+					<div class="card">
+						<img class="card-img-top" alt="Bootstrap Thumbnail First" src="https://codehs.com/uploads/0fbccf3ca9fb197c5ca262451bae3fe4" />
+						<div class="card-block">
+							<h5 class="card-title">
+								Avatar: The Way of Water
+							</h5>
+							<p class="card-text">
+								2022 (81%)
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="card">
+ <img class="card-img-top" alt="Bootstrap Thumbnail Second" src="https://codehs.com/uploads/c724c626b8715c622d3852fe44abe2ac" />
+							<div class="card-block">
+							<h5 class="card-title">
+								Sisu
+							</h5>
+							<p class="card-text">
+								2022 (86%)
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="card">
+						<img class="card-img-top" alt="Bootstrap Thumbnail Third" src="https://codehs.com/uploads/e13f256b63e375bd83a8abe1628b1748" />
+						<div class="card-block">
+							<h5 class="card-title">
+								Uncharted
+							</h5>
+							<p class="card-text">
+								2022 (64%)
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+	  
 	  
      <div class="table-responsive">
       <table class="table table-striped">
