--- a/ratings.html
+++ b/ratings.html
@@ -609,43 +609,13 @@
         <thead>
           <tr><th>Movie</th><th>Rating</th><th>Year</th></tr>
         </thead>
-
-          <tr><td>Predator:Badlands</td><td>82%</td><td>2025</td></tr>
-		  <tr><td>Avatar: Fire and Ash</td><td>72%</td><td>2025</td></tr>
-		   <tr><td>28 Years Later</td><td>86%</td><td>2025</td></tr>
-		   <tr><td>Captain America: Brave New World</td><td>52%</td><td>2025</td></tr>
-		   <tr><td>Mickey 17</td><td>76%</td><td>2025</td></tr>
-		   <tr><td>The Running Man</td><td>75%</td><td>2025</td></tr>
-		  <tr><td>Jurassic World Rebirth</td><td>44%</td><td>2025</td></tr>
-		  <tr><td>F1</td><td>85%</td><td>2025</td></tr>
-          <tr><td>Sinners</td><td>94%</td><td>2025</td></tr>
-		  <tr><td>Mission: Impossible – The Final Reckoning</td><td>81%</td><td>2025</td></tr>
-		   <tr><td>The Fantastic Four: First Steps</td><td>68%</td><td>2025</td></tr>
-		  <tr><td>SISU: Road to Revenge</td><td>92%</td><td>2025</td></tr>
-          <tr><td>The Fall Guy</td><td>70%</td><td>2024</td></tr>
-		  <tr><td>Small Things like These</td><td>79%</td><td>2024</td></tr>
-		  <tr><td>Fly Me to the Moon</td><td>66%</td><td>2024</td></tr>		
-		  <tr><td>Kingdom of the Planet of the Apes</td><td>76%</td><td>2024</td></tr>
-		  <tr><td>Lift</td><td>46%</td><td>2024</td></tr>
-		  <tr><td>Trap</td><td>55%</td><td>2024</td></tr>
-		  <tr><td>Mission: Impossible – Dead Reckoning Part One</td><td>89%</td><td>2023</td></tr>
-		  <tr><td>Gran Turismo</td><td>82%</td><td>2023</td></tr>
-		  <tr><td>The Creator</td><td>53%</td><td>2023</td></tr>
-		  <tr><td>Crater</td><td>54%</td><td>2023</td></tr>
-		  <tr><td>65</td><td>35%</td><td>2023</td></tr>
-		  <tr><td>The Boys in the Boat</td><td>75%</td><td>2023</td></tr>
-		   <tr></tr><td>Shooting Stars</td><td>65%</td><td>2023</td></tr>
-		   <tr><td>The Family Plan</td><td>56%</td><td>2023</td></tr>
-		  <tr><td>Heart of Stone</td><td>34%</td><td>2023</td></tr>
-		   <tr><td>The Long Game</td><td>73%</td><td>2023</td></tr>
-		  <tr><td>Indiana Jones and the Dial of Destiny</td><td>70%</td><td>2023</td></tr>
-		  <tr><td>Oppenheimer</td><td>91%</td><td>2023</td></tr>
-          <tr><td>Top Gun: Maverick</td><td>92%</td><td>2022</td></tr>
-		  <tr><td>All Quiet on the Western Front</td><td>90%</td><td>2022</td></tr>
-		  <tr><td>Everything Everywhere All at Once</td><td>93%</td><td>2022</td></tr>
-		  <tr><td>Avatar</td><td>81%</td><td>2022</td></tr>
-		  <tr><td>Sisu</td><td>86%</td><td>2022</td></tr>
-          <tr><td>Uncharted</td><td>64%</td><td>2022</td></tr>
+		  
+          <tr><td>Finch</td><td>82%</td><td>2021</td></tr>
+          <tr><td>Spider-man: No Way Home</td><td>92%</td><td>2021</td></tr>
+		   <tr><td>Red Notice</td><td>50%</td><td>2021</td></tr>
+		   <tr><td>Cruella</td><td>74%</td><td>2021</td></tr>
+		   <tr><td>Godzilla vs. Kong</td><td>69%</td><td>2021</td></tr>
+		  <tr><td>Diary of a Wimpy Kid</td><td>71%</td><td>2021</td></tr>
           <tr><td>The Black Phone</td><td>87%</td><td>2021</td></tr>
           <tr><td>Free Guy</td><td>89%</td><td>2021</td></tr>
          <tr><td>Space Jam: A New Legacy</td><td>39%</td><td>2021</td></tr>
