--- a/ratings.html
+++ b/ratings.html
@@ -357,7 +357,7 @@
 								The Creator
 							</h5>
 							<p class="card-text">
-								2024 (53%)
+								2023 (53%)
 							</p>
 						</div>
 					</div>
@@ -602,6 +602,102 @@
 	</div>
 </div>
 	  
+<h2>2021</h2>
+
+<br>
+
+
+	  <div class="container-fluid">
+	<div class="row">
+		<div class="col-md-6">
+			<div class="row">
+				<div class="col-md-4">
+					<div class="card">
+						<img class="card-img-top" alt="Bootstrap Thumbnail First" src="https://codehs.com/uploads/840be13ef38dbf81f48240bc3c773410" />
+						<div class="card-block">
+							<h5 class="card-title">
+								Finch
+							</h5>
+							<p class="card-text">
+								2021 (82%)
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="card">
+						<img class="card-img-top" alt="Bootstrap Thumbnail Second" src="https://codehs.com/uploads/3223c0743efcbd1ef3ccc4d2f1d82bb6" />
+						<div class="card-block">
+							<h5 class="card-title">
+								Spider-man: No Way Home
+							</h5>
+							<p class="card-text">
+								2021 (92%)
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="card">
+						<img class="card-img-top" alt="Bootstrap Thumbnail Third" src="https://codehs.com/uploads/1e5e02d7f00742ac8c742189b2e743ec" />
+						<div class="card-block">
+							<h5 class="card-title">
+								Red Notice
+							</h5>
+							<p class="card-text">
+								2021 (50%)
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="col-md-6">
+			<div class="row">
+				<div class="col-md-4">
+					<div class="card">
+						<img class="card-img-top" alt="Bootstrap Thumbnail First" src="https://codehs.com/uploads/55f381804751b4eaf718aa378891338b" />
+						<div class="card-block">
+							<h5 class="card-title">
+								Cruella
+							</h5>
+							<p class="card-text">
+								2021 (74%)
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="card">
+ <img class="card-img-top" alt="Bootstrap Thumbnail Second" src="https://codehs.com/uploads/1cf5155bcd7430ce6c10a8bcbd72f6ac" />
+							<div class="card-block">
+							<h5 class="card-title">
+								Godzilla vs. Kong
+							</h5>
+							<p class="card-text">
+								2021 (69%)
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="card">
+						<img class="card-img-top" alt="Bootstrap Thumbnail Third" src="https://codehs.com/uploads/bb59e8b2c4829aff5b17080715b6b4e3" />
+						<div class="card-block">
+							<h5 class="card-title">
+								Diary of a Wimpy Kid
+							</h5>
+							<p class="card-text">
+								2021 (71%)
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+<br>
 	  
      <div class="table-responsive">
       <table class="table table-striped">
