--- a/index.html
+++ b/index.html
@@ -57,17 +57,17 @@
 
         <div id="homeCarousel" class="carousel slide mb-4" data-ride="carousel">
           <ol class="carousel-indicators">
-            <li data-target="https://codehs.com/uploads/9a2ea882bfbc9d077c793019b5fa8ce1" data-slide-to="0" class="active"></li>
+            <li data-target="https://codehs.com/uploads/403cf52cdd70ca05b27fb009849aad20" data-slide-to="0" class="active"></li>
             <li data-target="https://codehs.com/uploads/1e6139431a43d7f1f3d78c8407579216" data-slide-to="1"></li>
-            <li data-target="https://codehs.com/uploads/454f18281702adb477774147c0c08dcb" data-slide-to="2"></li>
+            <li data-target="https://codehs.com/uploads/9eb9b28ac6508479dc4d570f2e24cb76" data-slide-to="2"></li>
           </ol>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="https://codehs.com/uploads/9a2ea882bfbc9d077c793019b5fa8ce1" class="d-block w-100" alt="Slide 1" >
+              <img src="https://codehs.com/uploads/403cf52cdd70ca05b27fb009849aad20" class="d-block w-100" alt="Slide 1" >
               <div class="carousel-caption d-none d-md-block">
-                <h5>Marvel</h5>
+                <h5></h5>
                 <p>
-First 'Avengers: Doomsday' trailer hits theaters and officially confirms the return of Captain America star Chris Evans </p>
+‘KPop Demon Hunters’ Nabs Two Wins at 2026 Golden Globes </p>
               </div>
             </div>
             <div class="carousel-item">
@@ -78,10 +78,10 @@ First 'Avengers: Doomsday' trailer hits theaters and officially confirms the ret
               </div>
             </div>
             <div class="carousel-item">
-              <img src="https://codehs.com/uploads/454f18281702adb477774147c0c08dcb" class="d-block w-100" alt="Slide 3" >
+              <img src="https://codehs.com/uploads/9eb9b28ac6508479dc4d570f2e24cb76" class="d-block w-100" alt="Slide 3" >
               <div class="carousel-caption d-none d-md-block">
-                <h5>'Gaston'</h5>
-                <p> ‘Beauty and the Beast’ Live-Action Villain Spinoff ‘Gaston’ in the Works at Disney</p>
+                <h5></h5>
+                <p> Mickey Rourke Stars in ‘3 Days Rising’ Trailer Alongside Peter Greene’s Final Lead Role (Exclusive)</p>
               </div>
             </div>
           </div>
