--- a/index.html
+++ b/index.html
@@ -101,18 +101,18 @@
         <div class="row">
           <div class="col-md-4">
              <img src="https://codehs.com/uploads/56dbfb53ee1b464a3292a16f2a316d23" width="100px">
-            <h3>Home (52%)</h3>
-            <p>Home (2015) is a DreamWorks animated movie where a misfit alien named Oh (Jim Parsons) befriends a resourceful girl, Tip (Rihanna), after his species, the Boov, invade Earth for refuge; they embark on a road trip to find Tip's mother while evading Oh's own kind, forming an unlikely bond and changing intergalactic relations.</p>
+            <h3>Uncut Gems (93%)</h3>
+            <p>Uncut Gems: Adam Sandler's starring role almost didn't happen ...Uncut Gems is about Howard Ratner (Adam Sandler), a charismatic but deeply flawed New York City jeweler and compulsive gambler in Manhattan's Diamond District, who takes a series of increasingly risky bets, centering around a rare black opal, to pay off mounting debts while juggling his wife, mistress, and dangerous loan sharks</p>
           </div>
           <div class="col-md-4">
-            <img src="https://codehs.com/uploads/fa7cc1328c07817d2a8ffd0766456f64" width="100px">
-            <h3>Sicario (92%)</h3>
-            <p>the 2015 film about an idealistic FBI agent (Emily Blunt) recruited into a shadowy government task force battling Mexican drug cartels, led by a mysterious operative (Benicio Del Toro) and a ruthless contractor (Josh Brolin), as they descend into morally gray areas where justice and brutality blur along the U.S.-Mexico border</p>
+            <img src="https://codehs.com/uploads/8499b10b369c1d1151c75f60011b5444" width="100px">
+            <h3>New York, New York (62%)</h3>
+            <p>New York, New York (1977) is Martin Scorsese's lavish musical about the turbulent romance between egotistical saxophonist Jimmy Doyle (Robert De Niro) and aspiring singer Francine Evans (Liza Minnelli), chronicling their passionate but tumultuous relationship and careers in the jazz and music world of post-WWII New York City, from their fateful meeting on V-J Day through struggles, marriage, and eventual estrangement, culminating in a famous final musical number.</p>
           </div>
           <div class="col-md-4">
-            <img src="https://codehs.com/uploads/fd42736a1c8cd87ced36b29255a33d6e" width="100px">
-            <h3>Mission: Impossible - Rogue Nation (92%)</h3>
-            <p>Mission: Impossible - Rogue Nation (2015) follows IMF agent Ethan Hunt (Tom Cruise) and his team as they hunt the Syndicate, a shadowy, highly-skilled network of rogue operatives, after the CIA disbands the IMF.</p>
+            <img src="https://codehs.com/uploads/99b98911f3204d38b5e338fa1fd46c5c" width="100px">
+            <h3>Song Sung Blue (81%)</h3>
+            <p>Song Sung Blue is a recent musical drama film (2025) starring Hugh Jackman and Kate Hudson, based on the true story of Mike and Claire Sardina, a Milwaukee couple who found fame as the popular Neil Diamond tribute band "Lightning & Thunder," exploring their heartwarming love story, rise to regional success, and devastating personal challenges, adapted from a 2008 documentary by Greg Kohs.</p>
           </div>
         </div>
       </div>
